--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,9 @@
         <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
         <sonar.language>java</sonar.language>
         <sonar.exclusions>**/MySurveyApplication.java, **/models/*.java, **/dtos/*.java</sonar.exclusions>
+        <sonar.sources>src/main/java</sonar.sources>
+        <sonar.tests>src/test/java</sonar.tests>
+        <sonar.java.binaries>target/classes</sonar.java.binaries>
     </properties>
     <dependencies>
         <dependency>
@@ -129,7 +132,13 @@
                 </archive>
             </configuration>
         </plugin>
-	<plugin>
+        <plugin>
+            <groupId>org.sonarsource.scanner.maven</groupId>
+            <artifactId>sonar-maven-plugin</artifactId>
+            <version>3.9.1.2184</version>
+        </plugin>
+
+        <plugin>
 	    <groupId>org.springframework.boot </groupId>
 	    <artifactId >spring-boot-maven-plugin </artifactId >
 	</plugin>
