test sonar cicd

--- a/pom.xml
+++ b/pom.xml
@@ -25,8 +25,8 @@
         <sonar.sources>src/main/java</sonar.sources>
         <sonar.tests>src/test/java</sonar.tests>
         <sonar.java.binaries>target/classes</sonar.java.binaries>
-        <sonar.organization>BENABBASAmira</sonar.organization>
-        <sonar.projectKey>benabbasamira</sonar.projectKey>
+        <sonar.organization>benabbasamira</sonar.organization>
+        <sonar.projectKey>amira2001_Projetprodl</sonar.projectKey>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
     <dependencies>
