test sonar cicd

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <sonar.java.binaries>target/classes</sonar.java.binaries>
         <sonar.organization>benabbasamira</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+        <sonar.projectKey>amira2001_Projetprodl</sonar.projectKey>
     </properties>
     <dependencies>
         <dependency>
